# RAG

./: .gitignore  README.md
appleap-rag/: docker-compose.yml  pyproject.toml  requirements.txt
appleap-rag/backend/: config.py  main.py
appleap-rag/backend/chunking/: chunker.py  code_chunker.py  dispatch.py  doc_type.py  nl_headers.py  queries.py
appleap-rag/backend/cli/: ingest.py
appleap-rag/backend/connectors/: base.py  github.py  google_drive.py  jira.py
appleap-rag/backend/db/: connection.py  models.py
appleap-rag/backend/embedding/: embedder.py
appleap-rag/backend/generation/: llm.py
appleap-rag/backend/parsing/: base.py  parser.py
appleap-rag/backend/retrieval/: keyword_search.py  reranker.py  vector_search.py
appleap-rag/eval/: conversations.json  evaluate.py  ingest_novacrest.py  questions.json  retrieval_diagnostic.py  smoke_chunking.py
appleap-rag/frontend/: index.html
infra/: pod-setup.sh
infra/cloud-function/: main.py
infra/cloudflare-worker/: worker.js  wrangler.toml
infra/vm-scripts/: appleap.service  idle-shutdown.sh
