[project]
name = "appleap-rag"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.30.0",
    "pgvector==0.3.5",
    "httpx==0.27.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-multipart==0.0.9",
]

[project.optional-dependencies]
parsing = ["unstructured[all-docs]", "tree-sitter>=0.23", "tree-sitter-language-pack>=0.4"]
google-drive = ["google-api-python-client>=2.100.0", "google-auth>=2.23.0"]
reranker = ["sentence-transformers>=3.0", "torch>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
